<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/profilePic"
        android:layout_width="62dp"
        android:layout_height="62dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_player_a"
        android:contentDescription="@string/player_image_desc" />

    <TextView
        android:id="@+id/playerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/color_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/profilePic"
        app:layout_constraintStart_toStartOf="@+id/profilePic"
        app:layout_constraintTop_toBottomOf="@+id/profilePic"
        app:layout_constraintVertical_bias="0.0"
        tools:text="Reeza Hendricks" />

    <TextView
        android:id="@+id/teamName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/color_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/playerName"
        app:layout_constraintStart_toStartOf="@+id/playerName"
        app:layout_constraintTop_toBottomOf="@+id/playerName"
        app:layout_constraintVertical_bias="0.0"
        tools:text="South Africa" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineQuarterStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineQuarterEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

        <TextView
            android:id="@+id/battingStatsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/batting_stats_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guidelineCenter"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/color_grey"
            app:layout_constraintTop_toBottomOf="@+id/teamName"
            app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/bowlingStatsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/bowling_stats_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                android:textColor="@color/color_grey"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guidelineCenter"
                app:layout_constraintTop_toBottomOf="@id/teamName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/styleLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/style_label"
                android:textColor="@color/color_black"
                app:layout_constraintEnd_toStartOf="@+id/guidelineQuarterStart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/battingStatsLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/battingStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="@+id/styleLabel"
                app:layout_constraintEnd_toStartOf="@+id/guidelineCenter"
                app:layout_constraintStart_toEndOf="@+id/guidelineQuarterStart"
                app:layout_constraintTop_toTopOf="@+id/styleLabel"
                tools:text="LHB" />

            <TextView
                android:id="@+id/avgLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/average"
                android:textColor="@color/color_black"
                app:layout_constraintEnd_toStartOf="@+id/guidelineQuarterStart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/styleLabel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/battingAvg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="@+id/avgLabel"
                app:layout_constraintEnd_toStartOf="@+id/guidelineCenter"
                app:layout_constraintStart_toEndOf="@+id/guidelineQuarterStart"
                app:layout_constraintTop_toTopOf="@+id/avgLabel"
                tools:text="2.0" />

            <TextView
                android:id="@+id/strikeRateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/strike_rate"
                android:textColor="@color/color_black"
                app:layout_constraintEnd_toStartOf="@+id/guidelineQuarterStart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/avgLabel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.0"/>

            <TextView
                android:id="@+id/strikeRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="@+id/strikeRateLabel"
                app:layout_constraintEnd_toStartOf="@+id/guidelineCenter"
                app:layout_constraintStart_toEndOf="@+id/guidelineQuarterStart"
                app:layout_constraintTop_toTopOf="@+id/strikeRateLabel"
                tools:text="2.0" />

            <TextView
                android:id="@+id/runLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/runs"
                android:textColor="@color/color_black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guidelineQuarterStart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/strikeRateLabel"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/runs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="@+id/runLabel"
                app:layout_constraintEnd_toStartOf="@+id/guidelineCenter"
                app:layout_constraintStart_toEndOf="@+id/guidelineQuarterStart"
                app:layout_constraintTop_toTopOf="@+id/runLabel"
                tools:text="123" />

            <TextView
                android:id="@+id/bowlingStyleLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/style_label"
                android:textColor="@color/color_black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guidelineQuarterEnd"
                app:layout_constraintStart_toEndOf="@+id/guidelineCenter"
                app:layout_constraintTop_toBottomOf="@+id/bowlingStatsLabel"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/bowlingStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="@id/bowlingStyleLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guidelineQuarterEnd"
                app:layout_constraintTop_toTopOf="@+id/bowlingStyleLabel"
                tools:text="LHB" />

            <TextView
                android:id="@+id/bowlingAvgLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/average"
                android:textColor="@color/color_black"
                app:layout_constraintEnd_toStartOf="@+id/guidelineQuarterEnd"
                app:layout_constraintStart_toEndOf="@id/guidelineCenter"
                app:layout_constraintTop_toBottomOf="@+id/bowlingStyleLabel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.0"/>

            <TextView
                android:id="@+id/bowlingAvg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="@+id/bowlingAvgLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guidelineQuarterEnd"
                app:layout_constraintTop_toTopOf="@+id/bowlingAvgLabel"
                tools:text="2.0" />

            <TextView
                android:id="@+id/economyRateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/economy_rate"
                android:textColor="@color/color_black"
                app:layout_constraintStart_toEndOf="@id/guidelineCenter"
                app:layout_constraintEnd_toStartOf="@+id/guidelineQuarterEnd"
                app:layout_constraintTop_toBottomOf="@+id/bowlingAvgLabel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.0"/>

            <TextView
                android:id="@+id/economyRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="@+id/economyRateLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guidelineQuarterEnd"
                app:layout_constraintTop_toTopOf="@+id/economyRateLabel"
                tools:text="2.0" />

            <TextView
                android:id="@+id/wicketsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/wickets_taken"
                android:textColor="@color/color_black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guidelineQuarterEnd"
                app:layout_constraintStart_toEndOf="@id/guidelineCenter"
                app:layout_constraintTop_toBottomOf="@+id/economyRateLabel"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/wickets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="@+id/wicketsLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guidelineQuarterEnd"
                app:layout_constraintTop_toTopOf="@+id/wicketsLabel"
                tools:text="123" />
</androidx.constraintlayout.widget.ConstraintLayout>